<resources>
    <!-- App Name -->
    <string name="app_name">SkyDelight</string>

    <!-- General Strings -->
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_return">Regresar</string>
    <string name="btn_update">Actualizar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="email">Correo Electrónico:</string>
    <string name="email_hint">ejemplo@hotmail.com</string>
    <string name="password">Contraseña:</string>
    <string name="password_hint">AbC123#*</string>
    <string name="remember_session">Mantener Sesión Iniciada</string>
    <string name="name">Nombre Completo:</string>
    <string name="sex">Sexo:</string>
    <string name="birthday">Edad:</string>

    <!-- Custom Loading Dialog Strings -->
    <string name="loadingDialog_creating">Creando Cuenta…</string>
    <string name="loadingDialog_login">Iniciando Sesión…</string>
    <string name="loadingDialog_recover">Enviando Contraseña…</string>
    <string name="loadingDialog_updating">Actualizando…</string>
    <string name="loadingDialog_loading">Cargando…</string>
    <string name="loadingDialog_error">"¡Ups!\n\n¡Hubo un Problema de Conexión!\n\n¡Parece que Estamos Teniendo Algunas Dificultades!"</string>

    <!-- Other Strings -->
    <!-- Start Screen Fragment Strings -->
    <string name="startScreen_welcome">Bienvenido(a) a</string>
    <string name="startScreen_relax">La Nueva Forma de Relajarse</string>
    <string name="startScreen_btn_register">¿Sin Cuenta? ¡Crea Una!</string>
    <string name="startScreen_recover_password">¿Olvidaste tu Contraseña?</string>

    <!-- Login Screen Fragment Strings -->
    <string name="loginScreen_title">¡Qué Bueno\nQue Volviste!</string>

    <!-- Recover Password Fragment Strings -->
    <string name="recoverScreen_title">¡Descuida! ¡Te Tenemos Cubierto!</string>
    <string name="recoverScreen_subtitle">Ingresa el Correo con\nel que te Registraste</string>
    <string name="recoverScreen_btn_recover">Recuperar Contraseña</string>

    <!-- Register First and Second Fragments Srings -->
    <string name="registerScreen_title">Creemos tu Cuenta</string>
    <string name="registerScreen_next">Siguiente</string>
    <string name="registerScreen_name_hint">Nombre Paterno Materno</string>
    <string name="registerScreen_male">Masculino</string>
    <string name="registerScreen_female">Femenino</string>
    <string name="registerScreen_title_2">¡Ya Casi Terminamos!</string>
    <string name="registerScreen_confirm_password">Confirmar Contraseña:</string>
    <string name="registerScreen_btn_create">Crear Cuenta</string>

    <!-- Register Third Fragments Srings -->
    <string name="registerScreen_title_3">Es Importante que Sepas lo Siguiente:</string>
    <string name="registerScreen_explanation_1">SkyDelight es un sistema para prevención del estrés académico</string>
    <string name="registerScreen_explanation_2">Se recomienda que sigas las sugerencias de la pantalla de inicio</string>
    <string name="registerScreen_explanation_3">Da seguimiento a tu estrés con la sección test y el sitio web</string>
    <string name="registerScreen_explanation_4">Diviértete usando realidad aumentada en el apartado de juegos</string>
    <string name="registerScreen_explanation_5">Este sistema no reemplaza ni sustituye asistencia profesional</string>
    <string name="registerScreen_explanation_6">Tus respuestas son analizadas para brindarte una mejor experiencia</string>
    <string name="registerScreen_btn_understand">¡Entendido!</string>

    <!-- Bottom Navigation Bar Srings -->
    <string name="navBar_home">Inicio</string>
    <string name="navBar_test">Test</string>
    <string name="navBar_games">Juegos</string>
    <string name="navBar_profile">Configuración</string>

    <!-- Home Navbar Fragment Strings -->
    <string name="home_title">¡Qué Bueno que Volviste!</string>


    <!-- Test Navbar Fragment Strings -->
    <string name="test_title">Elige un Cuestionario</string>
    <string name="test_sisco">Inventario Sistémico Cognoscitivista (SISCO) SV-21</string>
    <string name="test_svq">Test de Vulnerabilidad al Estrés (SVQ)</string>
    <string name="test_pss">Escala de Estrés Percibido (PSS)</string>
    <string name="test_cses">Escala de Autoeficacia para el Afrontamiento del Estrés (CSES)</string>
    <string name="test_svs">Lista de Indicadores de Vulnerabilidad al Estrés (SVS)</string>

    <!-- Games Navbar Fragment Strings -->
    <string name="games_title">¡Hora de Relajarse!</string>

    <!-- Profile Navbar Fragment Strings -->
    <string name="profile_title">¿Necesitas un Cambio?</string>
    <string name="profile_update_profile">Actualizar Información</string>
    <string name="profile_change_password">Cambiar Contraseña</string>
    <string name="profile_delete_account">Eliminar Cuenta</string>
    <string name="profile_btn_close_session">Cerrar Sesión</string>
    <string name="profile_update_password">¿Qué Contraseña Deseas?</string>
    <string name="profile_update_data">Ingresa tus Datos</string>
    <string name="profile_number">00</string>
    <string name="profile_note">Nota: el correo no puede cambiarse</string>
    <string name="profile_new_password">Nueva Contraseña:</string>

</resources>