<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/navBar_home" />
    <item
        android:id="@+id/nav_test"
        android:icon="@drawable/ic_baseline_text_snippet_24"
        android:title="@string/navBar_test" />
    <item
        android:id="@+id/nav_games"
        android:icon="@drawable/ic_baseline_videogame_asset_24"
        android:title="@string/navBar_games" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/anim_settings"
        android:title="@string/navBar_profile"
        app:showAsAction="always" />
</menu>
<!-- TODO("Make icon animations") https://medium.com/@naththeprince/delightful-animations-in-android-d6e9c62a23d3 -->