<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fragment_background"
    android:orientation="vertical"
    tools:context=".navbar.TestFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryVariant"
        android:text="@string/test_title"
        android:fontFamily="@font/comfortaa"
        android:gravity="center"
        android:textColor="@color/ultralight"
        android:textSize="@dimen/title_size_4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSISCO"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/comfortaa"
        android:backgroundTint="?attr/btn_background_blue"
        android:text="@string/test_sisco"
        android:textColor="?attr/btn_text_color_blue"
        android:state_enabled="true"
        android:textSize="@dimen/button_text_size_2"
        app:rippleColor="?attr/btn_text_color_blue"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_button1_bottom"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_button1_top" />

    <!--
        To use border in buttons
        app:strokeColor="?attr/btn_text_color_blue"
        app:strokeWidth="2dp"-->

    <Button
        android:id="@+id/btnSVQ"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/comfortaa"
        android:backgroundTint="?attr/btn_background_green"
        android:text="@string/test_svq"
        android:textColor="?attr/btn_text_color_green"
        android:state_enabled="true"
        android:textSize="@dimen/button_text_size_2"
        app:rippleColor="?attr/btn_text_color_green"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_button2_bottom"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_button2_top" />

    <Button
        android:id="@+id/btnPSS"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/comfortaa"
        android:backgroundTint="?attr/btn_background_blue"
        android:text="@string/test_pss"
        android:textColor="?attr/btn_text_color_blue"
        android:state_enabled="true"
        android:textSize="@dimen/button_text_size_2"
        app:rippleColor="?attr/btn_text_color_blue"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_button3_bottom"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_button3_top" />

    <Button
        android:id="@+id/btnCSES"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/comfortaa"
        android:backgroundTint="?attr/btn_background_green"
        android:text="@string/test_cses"
        android:textColor="?attr/btn_text_color_green"
        android:state_enabled="true"
        android:textSize="@dimen/button_text_size_2"
        app:rippleColor="?attr/btn_text_color_green"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_button4_bottom"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_button4_top" />

    <Button
        android:id="@+id/btnSVS"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/comfortaa"
        android:backgroundTint="?attr/btn_background_blue"
        android:text="@string/test_svs"
        android:textColor="?attr/btn_text_color_blue"
        android:state_enabled="true"
        android:textSize="@dimen/button_text_size_2"
        app:rippleColor="?attr/btn_text_color_blue"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_button5_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button1_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button1_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button2_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button2_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button3_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button3_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button4_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button4_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button5_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>