<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fragment_background"
    tools:context=".navbar.ProfilePasswordFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryVariant"
        android:text="@string/profile_update_password"
        android:fontFamily="@font/comfortaa"
        android:gravity="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/title_size_4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/comfortaa"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="?attr/text_color"
        android:textSize="@dimen/title_size_4"
        app:layout_constraintBottom_toTopOf="@+id/guideline_password_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_password_top" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/FieldPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/password_hint"
        android:textColorHint="?attr/text_color_hint"
        app:hintTextColor="?attr/text_color"
        app:boxStrokeColor="@color/text_input_stroke_color"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:startIconTint="?attr/text_color"
        app:passwordToggleTint="?attr/text_color"
        app:layout_constraintBottom_toTopOf="@+id/guideline_password_field_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_password_field_top" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:inputType="textPassword"
            android:textColor="?attr/text_color"
            android:textSize="@dimen/text_size"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/comfortaa"
        android:gravity="center"
        android:text="@string/registerScreen_confirm_password"
        android:textColor="?attr/text_color"
        android:textSize="@dimen/title_size_4"
        app:layout_constraintBottom_toTopOf="@+id/guideline_confirm_password_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_confirm_password_top" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/FieldConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/password_hint"
        android:textColorHint="?attr/text_color_hint"
        app:hintTextColor="?attr/text_color"
        app:boxStrokeColor="@color/text_input_stroke_color"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:startIconTint="?attr/text_color"
        app:passwordToggleTint="?attr/text_color"
        app:layout_constraintBottom_toTopOf="@+id/guideline_confirm_password_field_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_confirm_password_field_top" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTxtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:textColor="?attr/text_color"
            android:textSize="@dimen/text_size"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnUpdate"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="?attr/btn_background_blue"
        android:fontFamily="@font/comfortaa"
        android:state_enabled="true"
        android:text="@string/btn_update"
        android:textColor="?attr/btn_text_color_blue"
        android:textSize="@dimen/title_size_4"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_login_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_login_top"
        app:rippleColor="?attr/btn_text_color_blue"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/comfortaa"
        android:state_enabled="true"
        android:text="@string/btn_cancel"
        android:backgroundTint="?attr/btn_background_green"
        android:textColor="?attr/btn_text_color_green"
        android:textSize="@dimen/title_size_4"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_return_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_return_top"
        app:rippleColor="?attr/btn_text_color_green"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_password_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_password_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_password_field_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_password_field_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_confirm_password_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_confirm_password_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_confirm_password_field_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_confirm_password_field_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_return_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_return_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>